add style to orders and fix everything

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="header-center">
-      <h1 class="header-title">Order Flow</h1>
+      <h1 class="header-title"><a href="/">Order Flow</a></h1>
     </div>
     <div class="header-icons">
       <a href="/orders" class="icon-link">
