--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -71,7 +71,7 @@
         confirmPassword.classList.add('password-mismatch');
         confirmPassword.classList.remove('password-match');
         feedback.style.display = 'block';
-        submitButton.disabled = true;
+        // submitButton.disabled = true;
       } else {
         confirmPassword.classList.remove('password-mismatch');
         confirmPassword.classList.add('password-match');
