--- a/src/main/resources/templates/cart/cart.html
+++ b/src/main/resources/templates/cart/cart.html
@@ -40,6 +40,8 @@
             покупки</a>
         </div>
 
+        <h1>Ваш кошик</h1>
+
         <!-- Cart Items -->
         <div th:unless="${cart.items.isEmpty()}">
           <table class="cart-table w-full mb-4">
@@ -48,7 +50,7 @@
               <th class="py-2 px-4 text-left">Товар</th>
               <th class="py-2 px-4 text-left">Кількість</th>
               <th class="py-2 px-4 text-left">Ціна</th>
-              <th class="py-2 px-4 text-left">Дії</th>
+              <th class="py-2 px-4 text-left"></th>
             </tr>
             </thead>
             <tbody>
